--- a/source/_includes/custom/home_landing_row.html
+++ b/source/_includes/custom/home_landing_row.html
@@ -1,10 +1,7 @@
 <div id="about-me" class="col-md-offset-3 col-md-6">
-  <h4>about me</h4>
-  <p>I'm a full-stack dev from Chicago now living in San Francisco. I build apps and products, such as <a href="https://www.GitRep.com">GitRep</a>, a platform that helps developers find and organize GitHub repos, and <a href="https://www.Lookira.com">Lookira</a>, a phone number owner reverse lookup site.</p>
-  <p>Here I ramble about things such as software development, building products, and living life. Radical!</p>
+  <h4>Bringing the Bar Experience to You</h4>
+  <p>Otto is all about convenience and class with a DIY flair. Whether it be for entertaining guests at an alluring suare or a night in for a party of one, Otto is the first and last automated bartender to fit your needs and budget.</p>
   <div class="social-icon-list">
-    <a title="Twitter" href="https://twitter.com/AdrianArtiles"><img src="/images/glyphicons_social_31_twitter.png"/></a>
-    <a title="GitHub" href="https://github.com/sevenadrian"><img src="/images/glyphicons_social_21_github.png"/></a>
-    <a title="E-Mail" href="mailto:adrian.r.artiles@gmail.com"><img src="/images/glyphicons_social_39_e-mail.png"/></a>
+    <a title="GitHub" href="https://github.com/otto-mixr/"><img src="/images/glyphicons_social_21_github.png"/></a>
   </div>
 </div>
