--- a/source/_includes/custom/home_landing_row.html
+++ b/source/_includes/custom/home_landing_row.html
@@ -1,6 +1,6 @@
 <div id="about-me" class="col-md-offset-3 col-md-6">
   <h4>Bringing the Bar Experience to You</h4>
-  <p>Otto is all about convenience and class with a DIY flair. Whether it be for entertaining guests at an alluring suare or a night in for a party of one, Otto is the first and last automated bartender to fit your needs and budget.</p>
+  <p>Otto is all about convenience and class with a DIY flair. Whether you're entertaining friends on a Saturday evening or having a night in for a party of one, Otto is the first and last automated bartender to fit your needs and your budget.</p>
   <div class="social-icon-list">
     <a title="GitHub" href="https://github.com/otto-mixr/"><img src="/images/glyphicons_social_21_github.png"/></a>
   </div>
