--- a/source/_includes/custom/home_landing_row.html
+++ b/source/_includes/custom/home_landing_row.html
@@ -4,4 +4,7 @@
   <div class="social-icon-list">
     <a title="GitHub" href="https://github.com/otto-mixr/"><img src="/images/glyphicons_social_21_github.png"/></a>
   </div>
+  <div>
+    <a title="Charter" href="/blog/2014/04/13/charter">Charter Placeholder Link</a>
+  </div>
 </div>
