--- a/source/_includes/custom/home_landing_row.html
+++ b/source/_includes/custom/home_landing_row.html
@@ -1,7 +1,13 @@
 <div id="about-me" class="col-md-offset-3 col-md-6">
   <h4>Bringing the Bar Experience to You</h4>
   <p>Otto is all about convenience and class with a DIY flair. Whether you're entertaining friends on a Saturday evening or having a night in for a party of one, Otto is the first and last automated bartender to fit your needs and your budget.</p>
+
+  <!-- -->
   <div class="social-icon-list">
-    <a title="Project Charter and Other Good Stuff" href="/charter">Project Charter and Other Good Stuff </a>
+    <a></a>
+    <!--<a title="GitHub" href="https://github.com/sevenadrian"><img src="/images/glyphicons_social_21_github.png"/></a>-->
+    <!--<a title="Project Charter and Other Good Stuff" href="/charter">Project Charter and Other Good Stuff </a>-->
   </div>
+ <!-- -->
+
 </div>
