--- a/source/_includes/custom/nav-docs.html
+++ b/source/_includes/custom/nav-docs.html
@@ -1,1 +1,3 @@
-<p>test</p>
+<div class="post-row">
+  <a title="Project Charter and Other Good Stuff" href="/charter">Project Charter and Other Good Stuff </a>
+</div>
