Less lazy framework for navbar

--- a/source/_includes/custom/nav-docs.html
+++ b/source/_includes/custom/nav-docs.html
@@ -1,3 +1,5 @@
 <div class="post-row">
-  <a title="Project Charter and Other Good Stuff" href="/charter">Project Charter and Other Good Stuff </a>
+  <ul>
+    <li id="nav-charter"><a href="/charter">Project Charter and Other Good Stuff </a></li>
+  </ul>
 </div>
