--- a/source/_includes/custom/nav-docs.html
+++ b/source/_includes/custom/nav-docs.html
@@ -1,5 +1,5 @@
 <div class="post-row">
-  <ul>
-    <li id="nav-charter"><a href="/charter">Project Charter and Other Good Stuff </a></li>
-  </ul>
+  <nav>
+    <a href="/charter">Project Charter and Other Good Stuff </a>
+  </nav>
 </div>
