Added nav bar to top of post layout

--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -3,6 +3,7 @@ layout: default
 single: true
 ---
 
+{% include custom/nav-docs.html %}
 <article role="article" class="full-single-article">
   <div class="container">
     <div class="row">
