--- a/source/_includes/custom/nav-docs.html
+++ b/source/_includes/custom/nav-docs.html
@@ -1,5 +1,6 @@
 <div class="post-row">
   <nav>
-    <a href="/charter">Project Charter and Other Good Stuff </a>
+    <a href="/"> Home</a> | 
+    <a href="/charter"> Project Charter and Other Good Stuff</a>
   </nav>
 </div>
