--- a/source/_layouts/default_nav_top.html
+++ b/source/_layouts/default_nav_top.html
@@ -5,11 +5,13 @@
 <!--[if (gt IE 8)|(gt IEMobile 7)|!(IEMobile)|!(IE)]><!--><html class="no-js" lang="en"><!--<![endif]-->
 {% include head.html %}
   <body>
-  <!--
-    <a href="/" class="home-icon">
+
+{% include custom/nav-docs.html %}
+<!--    
+<a href="/" class="home-icon">
       <img src="/images/home.png"/>
-    </a>
-  -->
+</a>
+-->
 
     {{ content | expand_urls: root_url }}
     {% include footer.html %}
