--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -1,9 +1,8 @@
 ---
-layout: default
+layout: default_nav_top
 single: true
 ---
 
-{% include custom/nav-docs.html %}
 <article role="article" class="full-single-article">
   <div class="container">
     <div class="row">
